# grpo_code

./: .env.local.example  .gitignore  README.md  pyproject.toml  requirements.txt
grpo/: README.md  __init__.py
grpo/configs/: m2rl_if.yaml  m2rl_if_6gpu_141gb.yaml  m2rl_if_8gpu_141gb.yaml  (+6 more)
grpo_training/: __init__.py  launch.py  prepare_data.py  settings.py
mopd_verl/: __init__.py  audit_math.py  audit_proxy.py  audit_scalar_logging.py  checkpoints.py  code_reward.py  config_validation.py  domain_sampling.py  full_gradient_worker.py  general_reasoner_data.py  general_reasoner_reward.py  general_verifier_worker.py  launch.py  paper_eval.py  prepare_data.py  search_retrieval_server.py  searchqa_data.py  settings.py  smoke_data.py  sopc_lite.py  teacher_prefix.py  tensorboard_filter.py  tensorboard_tags.py  thinking_eval.py  thinking_eval_utils.py  toolrl_data.py  toolrl_reward.py  topk_distill.py  verl_audit.py  weight_diff_conflict.py  weight_diff_io.py  weight_diff_metrics.py  weight_diff_output.py  weight_diff_save.py
scripts/: download_assets.sh  install_conda_env.sh  prepare_nemotron_rl_data.py  remote_common.sh  remote_smoke.sh  run_general_reasoner_grpo.sh  run_grpo.sh  run_m2rl_141gb.sh  run_m2rl_if_6gpu_141gb.sh  run_m2rl_if_8gpu_141gb.sh  run_m2rl_if_grpo.sh  run_m2rl_if_science_grpo.sh  run_m2rl_science_2gpu_smoke.sh  run_m2rl_science_6gpu_141gb.sh  run_m2rl_science_8gpu_141gb.sh  run_m2rl_science_grpo.sh  run_toolrl_grpo.sh  ssh.example.sh  sync_remote.sh
tests/: test_141gb_profiles.py  test_checkpoint_retention.py  test_grpo_m2rl.py  test_wandb_env.py
(+9 files in other folders)
